Update configuration examples
Updated mail configuration settings.
Updated Flyway property names.
Added JDBC appender for Log4j2.
Added suffix test to testing profile log files.

--- a/config-example/config/application.properties
+++ b/config-example/config/application.properties
@@ -105,10 +105,10 @@ daiad.home.ga.ua=
 # Flyway
 #
 
-flyway.enabled=true
-flyway.baseline-description=Database initialization
-flyway.baseline-version=0_0_0
-flyway.baseline-on-migrate=false 
-flyway.locations=classpath:db/migration/daiad/
-flyway.schemas=public,batch
-flyway.table=schema_version
+spring.flyway.enabled=true
+spring.flyway.baseline-description=Database initialization
+spring.flyway.baseline-version=0_0_0
+spring.flyway.baseline-on-migrate=false 
+spring.flyway.locations=classpath:db/migration/daiad/
+spring.flyway.schemas=public,batch
+spring.flyway.table=schema_version
