--- a/config-example/config/mail.properties
+++ b/config-example/config/mail.properties
@@ -1,18 +1,22 @@
-# Spring required properties
-spring.mail.default-encoding = UTF-8
+#
+# Mail Service
+#
 
-spring.mail.host =
-spring.mail.port =
-
-spring.mail.username =
-spring.mail.password =
-
-# Spring optional properties
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.starttls.enable = true
-
-# Custom properties
 daiad.mail.enabled = false
-daiad.mail.template.prefix = classpath:/mail/templates/
 daiad.mail.sender.address =
 daiad.mail.sender.name =
+
+# SMTP
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS
+spring.mail.properties.mail.smtp.starttls.enable=true
