Fix mail template configuration
Added new property daiad.mail.template.prefix to externalize view location.
Appended locale suffix to view name.
Fixed base name for message source.

--- a/api/config-example/config/mail.properties
+++ b/api/config-example/config/mail.properties
@@ -6,6 +6,8 @@ daiad.mail.enabled = false
 daiad.mail.sender.address =
 daiad.mail.sender.name =
 
+daiad.mail.template.prefix=
+
 # SMTP
 spring.mail.host=
 spring.mail.port=
