--- a/scheduler/config-example/config/mail.properties
+++ b/scheduler/config-example/config/mail.properties
@@ -6,6 +6,8 @@ daiad.mail.enabled = false
 daiad.mail.sender.address =
 daiad.mail.sender.name =
 
+daiad.mail.template.prefix=
+
 # SMTP
 spring.mail.host=
 spring.mail.port=
