Persist session state in database

--- a/utility/config-example/config/application.properties
+++ b/utility/config-example/config/application.properties
@@ -80,6 +80,25 @@ daiad.spatial.neighbourhood.group=
 daiad.home.ga.ua=
 
 #
+# Session
+#
+
+spring.session.store-type = JDBC
+spring.session.timeout = 7200
+
+spring.session.jdbc.initialize-schema = NEVER
+
+server.servlet.session.timeout = 7200
+
+server.servlet.session.cookie.domain =
+server.servlet.session.cookie.http-only = true
+server.servlet.session.cookie.max-age = 7200
+#https://github.com/spring-projects/spring-session/issues/1257
+server.servlet.session.cookie.name = SESSION
+server.servlet.session.cookie.path = /
+server.servlet.session.cookie.secure = false
+
+#
 # Flyway
 #
 
@@ -88,11 +107,11 @@ spring.flyway.baseline-description=Database initialization
 spring.flyway.baseline-version=0_0_0
 spring.flyway.baseline-on-migrate=false 
 spring.flyway.locations=classpath:db/migration/daiad/
-spring.flyway.schemas=public,batch
+spring.flyway.schemas=public,web,batch
 spring.flyway.table=schema_version
 
 #
-# Feign clients
+# Feign
 #
 
 daiad.feign.scheduler-service.name=scheduler-service
