--- a/home/config-example/config/application-production.properties
+++ b/home/config-example/config/application-production.properties
@@ -3,3 +3,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/daiad
 spring.datasource.username=
 spring.datasource.password=
+
+#
+# Session
+#
+
+server.servlet.session.cookie.secure=true
