--- a/home/config-example/config/application.properties
+++ b/home/config-example/config/application.properties
@@ -78,3 +78,22 @@ daiad.spatial.neighbourhood.group=
 
 # Google Analytics for DAIAD@home client
 daiad.home.ga.ua=
+
+#
+# Session
+#
+
+spring.session.store-type = JDBC
+spring.session.timeout = 7200
+
+spring.session.jdbc.initialize-schema = NEVER
+
+server.servlet.session.timeout = 7200
+
+server.servlet.session.cookie.domain =
+server.servlet.session.cookie.http-only = true
+server.servlet.session.cookie.max-age = 7200
+#https://github.com/spring-projects/spring-session/issues/1257
+server.servlet.session.cookie.name = SESSION
+server.servlet.session.cookie.path = /
+server.servlet.session.cookie.secure = false
