--- a/utility/.gitignore
+++ b/utility/.gitignore
@@ -18,10 +18,10 @@ node
 node_modules
 npm-debug.log
 
-src/main/resources/public/assets/js/build
 src/main/resources/public/assets/images
 src/main/resources/public/assets/lib
 src/main/resources/public/assets/data
+src/main/resources/public/assets/js/**
 
 src/main/resources/public/docs
 
