--- a/utility/package.json
+++ b/utility/package.json
@@ -25,7 +25,7 @@
     "moment": "^2.16.0",
     "moment-timezone": "^0.5.4",
     "numeral": "^1.5.3",
-    "rc-switch": "^1.4.2",
+    "rc-switch": "1.4.2",
     "react": "~0.14.6",
     "react-bootstrap": "^0.28.2",
     "react-bootstrap-daterangepicker": "~1.0.6",
