--- a/api/pom.xml
+++ b/api/pom.xml
@@ -53,6 +53,12 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-properties-migrator</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
@@ -309,28 +315,22 @@
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
-			<version>67.1</version>
+			<version>${com.ibm.icu.icu4j.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.locationtech.jts</groupId>
 			<artifactId>jts</artifactId>
-			<version>1.16.1</version>
+			<version>${org.locationtech.jts.version}</version>
 			<type>pom</type>
 		</dependency>
 
 		<dependency>
 			<groupId>org.locationtech.spatial4j</groupId>
 			<artifactId>spatial4j</artifactId>
-			<version>0.7</version>
+			<version>${org.locationtech.spatial4j.version}</version>
 		</dependency>
         
-		<dependency>
-			<groupId>com.bedatadriven</groupId>
-			<artifactId>jackson-datatype-jts</artifactId>
-			<version>2.4</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-geometry</artifactId>
@@ -370,7 +370,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
-			<version>4.1</version>
+			<version>${org.apache.commons.commons-collections4.version}</version>
 		</dependency>
 
 		<dependency>
