--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,7 +20,18 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-properties-migrator</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -69,14 +80,14 @@
 		<dependency>
 			<groupId>org.locationtech.jts</groupId>
 			<artifactId>jts</artifactId>
-			<version>1.16.1</version>
+			<version>${org.locationtech.jts.version}</version>
 			<type>pom</type>
 		</dependency>
 
 		<dependency>
 			<groupId>org.locationtech.spatial4j</groupId>
 			<artifactId>spatial4j</artifactId>
-			<version>0.7</version>
+			<version>${org.locationtech.spatial4j.version}</version>
 		</dependency>
 
 		<dependency>
@@ -108,12 +119,6 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.bedatadriven</groupId>
-			<artifactId>jackson-datatype-jts</artifactId>
-			<version>2.4</version>
 		</dependency>
 
 		<!-- Hadoop / HBase -->
@@ -190,7 +195,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
-			<version>4.1</version>
+			<version>${org.apache.commons.commons-collections4.version}</version>
 		</dependency>
 
 		<dependency>
@@ -207,7 +212,7 @@
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
-			<version>67.1</version>
+			<version>${com.ibm.icu.icu4j.version}</version>
 		</dependency>
 
 	</dependencies>
