--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.3.RELEASE</version>
+    <version>2.5.2</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -56,14 +56,18 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <jackson.version>2.11.2</jackson.version>
+    <apache.csv.version>1.8</apache.csv.version>
+    <apache.poi.version>4.1.2</apache.poi.version>
+    <com.ibm.icu.icu4j.version>69.1</com.ibm.icu.icu4j.version>
+    <geotools.version>24.4</geotools.version>
     <hadoop.version>2.6.0</hadoop.version>
     <hbase.version>1.0.0</hbase.version>
-    <geotools.version>23.2</geotools.version>
-    <apache.poi.version>4.1.2</apache.poi.version>
-    <apache.csv.version>1.8</apache.csv.version>
-    <joda.time.version>2.10.6</joda.time.version>
+    <jackson.version>2.11.2</jackson.version>
+    <joda.time.version>2.10.10</joda.time.version>
+    <org.apache.commons.commons-collections4.version>4.4</org.apache.commons.commons-collections4.version>
     <org.jadira.usertype.version>6.0.1.GA</org.jadira.usertype.version>
+    <org.locationtech.jts.version>1.18.1</org.locationtech.jts.version>
+    <org.locationtech.spatial4j.version>0.8</org.locationtech.spatial4j.version>
 
     <dependency.locations.enabled>false</dependency.locations.enabled>
     
@@ -92,7 +96,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter</artifactId>
-        <version>2.3.3.RELEASE</version>
+        <version>2.5.2</version>
         <exclusions>
           <exclusion>
             <groupId>org.springframework.boot</groupId>
