--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -38,19 +38,28 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<jackson.version>2.11.2</jackson.version>
-		<hadoop.version>2.6.0</hadoop.version>
-		<hbase.version>1.0.0</hbase.version>
-		<geotools.version>23.2</geotools.version>
-		<apache.poi.version>4.1.2</apache.poi.version>
-		<apache.csv.version>1.8</apache.csv.version>
-		<joda.time.version>2.10.6</joda.time.version>
-		<org.jadira.usertype.version>6.0.1.GA</org.jadira.usertype.version>
-
+		<!-- 
+			 Do not include Spring Cloud. Zookeeper latest release is not compatible 
+			 with the current HBase client 
+		-->
+		<spring-cloud-openfeign.version>3.0.3</spring-cloud-openfeign.version>
+		
 		<dependency.locations.enabled>false</dependency.locations.enabled>
 		
 		<frontend.skip>false</frontend.skip>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+      	<dependency>
+        	<groupId>org.springframework.cloud</groupId>
+        	<artifactId>spring-cloud-openfeign-dependencies</artifactId>
+        	<version>${spring-cloud-openfeign.version}</version>
+        	<type>pom</type>
+        	<scope>import</scope>
+      	</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 
@@ -61,6 +70,12 @@
         </dependency>
 
 		<!-- Spring-Boot starter dependencies -->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-properties-migrator</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -87,6 +102,14 @@
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
 
+		<!-- Spring Cloud -->     
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		
+		<!-- Testing -->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -304,28 +327,22 @@
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
-			<version>67.1</version>
+			<version>${com.ibm.icu.icu4j.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.locationtech.jts</groupId>
 			<artifactId>jts</artifactId>
-			<version>1.16.1</version>
+			<version>${org.locationtech.jts.version}</version>
 			<type>pom</type>
 		</dependency>
 
 		<dependency>
 			<groupId>org.locationtech.spatial4j</groupId>
 			<artifactId>spatial4j</artifactId>
-			<version>0.7</version>
+			<version>${org.locationtech.spatial4j.version}</version>
 		</dependency>
         
-		<dependency>
-			<groupId>com.bedatadriven</groupId>
-			<artifactId>jackson-datatype-jts</artifactId>
-			<version>2.4</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-geometry</artifactId>
@@ -370,7 +387,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
-			<version>4.1</version>
+			<version>${org.apache.commons.commons-collections4.version}</version>
 		</dependency>
 
 		<dependency>
@@ -413,44 +430,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-
-			<plugin>
-				<groupId>com.github.eirslett</groupId>
-				<artifactId>frontend-maven-plugin</artifactId>
-				<version>1.10.0</version>
-				<configuration>
-					<skip>${frontend.skip}</skip>
-				</configuration>
-				<executions>
-					<execution>
-						<id>node-isntall</id>
-						<goals>
-							<goal>install-node-and-npm</goal>
-						</goals>
-						<configuration>
-							<nodeVersion>v10.22.1</nodeVersion>
-						</configuration>
-					</execution>
-					<execution>
-						<id>npm-install</id>
-						<goals>
-							<goal>npm</goal>
-						</goals>
-						<configuration>
-							<arguments>install</arguments>
-						</configuration>
-					</execution>
-					<execution>
-						<id>npm-run-build</id>
-						<goals>
-							<goal>npm</goal>
-						</goals>
-						<configuration>
-							<arguments>run build</arguments>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 
 		<pluginManagement>
@@ -459,45 +438,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 				</plugin>
-
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>com.github.eirslett</groupId>
-										<artifactId>frontend-maven-plugin</artifactId>
-										<versionRange>[0.0,)</versionRange>
-										<goals>
-											<goal>install-node-and-npm</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>com.github.eirslett</groupId>
-										<artifactId>frontend-maven-plugin</artifactId>
-										<versionRange>[0.0,)</versionRange>
-										<goals>
-											<goal>npm</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore />
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-
 			</plugins>
 
 		</pluginManagement>
