--- a/utility/pom.xml
+++ b/utility/pom.xml
@@ -42,8 +42,7 @@
 			 Do not include Spring Cloud. Zookeeper latest release is not compatible 
 			 with the current HBase client 
 		-->
-		<spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-		<spring-cloud-openfeign.version>2.2.2.RELEASE</spring-cloud-openfeign.version>
+		<spring-cloud-openfeign.version>3.0.3</spring-cloud-openfeign.version>
 		
 		<dependency.locations.enabled>false</dependency.locations.enabled>
 		
@@ -71,6 +70,12 @@
         </dependency>
 
 		<!-- Spring-Boot starter dependencies -->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-properties-migrator</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -337,26 +342,20 @@
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
-			<version>67.1</version>
+			<version>${com.ibm.icu.icu4j.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.locationtech.jts</groupId>
 			<artifactId>jts</artifactId>
-			<version>1.16.1</version>
+			<version>${org.locationtech.jts.version}</version>
 			<type>pom</type>
 		</dependency>
 
 		<dependency>
 			<groupId>org.locationtech.spatial4j</groupId>
 			<artifactId>spatial4j</artifactId>
-			<version>0.7</version>
-		</dependency>
-        
-		<dependency>
-			<groupId>com.bedatadriven</groupId>
-			<artifactId>jackson-datatype-jts</artifactId>
-			<version>2.4</version>
+			<version>${org.locationtech.spatial4j.version}</version>
 		</dependency>
 
 		<dependency>
@@ -397,7 +396,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
-			<version>4.1</version>
+			<version>${org.apache.commons.commons-collections4.version}</version>
 		</dependency>
 
 		<dependency>
