Update configuration examples

--- a/api/config-example/config/application.properties
+++ b/api/config-example/config/application.properties
@@ -8,7 +8,7 @@ daiad.url=https://api.daiad.eu/
 spring.profiles.active=production
 
 # Hide Spring boot banner
-spring.main.show_banner=false
+spring.main.banner-mode=off
 
 # Log4j configuration properties
 logging.config=classpath:log4j2.xml
