--- a/scheduler/config-example/config/application.properties
+++ b/scheduler/config-example/config/application.properties
@@ -8,7 +8,7 @@ daiad.url=https://utility.daiad.eu/
 spring.profiles.active=production
 
 # Hide Spring boot banner
-spring.main.show_banner=false
+spring.main.banner-mode=off
 
 # Log4j configuration properties
 logging.config=classpath:log4j2.xml
@@ -92,3 +92,13 @@ daiad.report.path=
 
 # Spatial parameters
 daiad.spatial.neighbourhood.group=
+
+# Enables pre-aggregation for Data API
+daiad.data.api.pre-aggregation=true
+
+#
+# Feign
+#
+
+daiad.feign.urban-water-service.name=urban-water-service
+daiad.feign.urban-water-service.url=
