--- a/scheduler/config-example/config/batch.properties
+++ b/scheduler/config-example/config/batch.properties
@@ -2,10 +2,10 @@
 spring.batch.job.enabled=false
 
 # Initialize Spring Batch database schema
-spring.batch.initialize-schema=never
+spring.batch.jdbc.initialize-schema=never
 
 # Prefix used by Spring Batch job repository for schema objects
-spring.batch.table-prefix=batch.
+spring.batch.jdbc.table-prefix=batch.
 
 # Sequence name for DataSourceJobParametersIncrementer implementation
 job.parameters.incrementer.name=incrementer
