Add data loader for ThingsLog service

--- a/scheduler/config-example/config/application-development.properties
+++ b/scheduler/config-example/config/application-development.properties
@@ -1,5 +1,14 @@
+#
 # Data source configuration
+#
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/daiad
 spring.datasource.username=
 spring.datasource.password=
+
+#
+# Feign
+#
+
+feign.httpclient.disable-ssl-validation=true
