--- a/scheduler/config-example/config/application.properties
+++ b/scheduler/config-example/config/application.properties
@@ -102,3 +102,6 @@ daiad.data.api.pre-aggregation=true
 
 daiad.feign.urban-water-service.name=urban-water-service
 daiad.feign.urban-water-service.url=
+
+daiad.feign.things-log-service.name=things-log-service
+daiad.feign.things-log-service.url=
